--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
-  sweet_nav_bar: ^1.0.5
+  fancy_bar: ^2.0.0
   intl: ^0.19.0
   font_awesome_flutter: ^10.7.0
   whatsapp_unilink: ^2.1.0
@@ -47,6 +47,8 @@ dependencies:
   cached_network_image: ^3.3.1
   shimmer_pro: ^0.0.6
   image_card: ^0.0.4
+  circular_bottom_navigation: ^2.4.0
+  fancy_bottom_navigation_plus: ^1.0.3
 
 dev_dependencies:
   flutter_test:
