--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,16 @@ dependencies:
   image_card: ^0.0.4
   circular_bottom_navigation: ^2.4.0
   fancy_bottom_navigation_plus: ^1.0.3
+  aqua_nav_bar: ^1.0.4
+  flutter_typeahead: ^5.2.0
+  suggestion_input_field: ^0.0.6
+  loading_animation_widget: ^1.2.1
+  google_maps_flutter: ^2.6.0
+  geolocator: ^11.0.0
+  permission_handler: ^11.3.1
+  flutter_map_animations: ^0.6.0
+  flutter_map_location_marker: ^8.0.8
+
 
 dev_dependencies:
   flutter_test:
