--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_map_animations: ^0.6.0
   flutter_map_location_marker: ^8.0.8
+  shared_preferences: ^2.2.2
+  geocoding: ^3.0.0
 
 
 dev_dependencies:
